--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ body {
 .general_body p {
     margin-top: 10px;
     margin-bottom: 10px;
-    font-size: 2.5rem;
+    font-size: 1.5rem;
     font-family: 'Raleway', sans-serif;
     font-weight: 300;
     color: aliceblue;
@@ -321,4 +321,13 @@ body {
     .workshop {
         width: 100vw;
     }
+}
+
+/* Carrito */
+.carrito {
+    list-style: none;
+    display: flex;
+    text-align: end;
+    margin-right: 1rem;
+    justify-content: end;
 }
