Primer entrega final proyecto JavScript

--- a/sass/_workshop.scss
+++ b/sass/_workshop.scss
@@ -187,3 +187,16 @@
 
     }
 }
+
+
+// Contenedor Forma de Pago
+.contenedor-tarjeta {
+    width: 90%;
+    max-width: 1000px;
+    padding: 40px 20px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
