--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Bungee&family=Noto+Sans:ital,wght@0,100;0,300;0,600;1,100;1,300;1,600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300&family=Raleway:ital,wght@0,100;0,300;0,600;1,100;1,300;1,600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Liu+Jian+Mao+Cao&family=Noto+Sans:wght@300&family=Raleway:ital,wght@0,100;0,300;0,600;1,100;1,300;1,600&display=swap');
 @import "./mapsandmixin";
 @import "./body";
 @import "./header";
@@ -8,4 +9,7 @@
 @import "./blog";
 @import "./application";
 @import "./workshop";
+@import "./tarjeta-front";
+@import "./tarjeta-back";
+@import "./tarjeta-form";
 @import "./blogs";
